data/derived/sp14/progs/unify/prog0068.ml.out
Characters 28-29:
  let _ = exprToString(Divide(1,2));;
                              ^
Error: This expression has type int but an expression was expected of type
         expr
